--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "framer-motion": "^10.1.0",
     "next": "13.2.3",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
