--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@heroicons/react": "^2.0.16",
     "@radix-ui/react-alert-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.3",
+    "@radix-ui/react-label": "^2.0.0",
     "@radix-ui/react-progress": "^1.0.1",
     "@radix-ui/react-scroll-area": "^1.0.2",
+    "@radix-ui/react-select": "^1.2.0",
     "@radix-ui/react-separator": "^1.0.1",
     "@radix-ui/react-tabs": "^1.0.2",
     "@tailwindcss/forms": "^0.5.3",
